<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_acknowledgements">Acknowledgements</string>
    <string name="about_dev_friends">Contributors</string>
    <string name="about_douyin">抖音</string>
    <string name="about_email">E-mail</string>
    <string name="about_feedback">Feedback</string>
    <string name="about_open_source_licenses">Open Source Licenses</string>
    <string name="about_qq_channel">QQ Channel</string>
    <string name="about_qq_group">QQ Group</string>
    <string name="about_version">Version</string>
    <string name="about_wechat_public">WeChat Official Account</string>
    <string name="about_weibo">Sina Weibo</string>
    <string name="about_xiaohongshu">小红书</string>
    <string name="account_safety">账号与安全</string>
    <string name="add_course_at_lease_one_period">At least one time period is needed.</string>
    <string name="add_course_change_color">Change Color</string>
    <string name="add_course_classroom">Classroom</string>
    <string name="add_course_date_mode">Date Mode</string>
    <string name="add_course_error_input_course_name">Please input the course name.</string>
    <string name="add_course_least_one_week">At least one week is needed.</string>
    <string name="add_course_lesson">Lesson %1$d</string>
    <string name="add_course_need_save_title">Need to save the current edits?</string>
    <string name="add_course_teacher">Teacher</string>
    <string name="add_course_time">Lesson %2$d - %3$d, %1$s</string>
    <string name="add_course_title_select_date_range">Select Date Range</string>
    <string name="add_course_title_select_time">Day &amp; Period</string>
    <string name="add_course_title_select_week">Select Weeks</string>
    <string name="add_course_week_mode">Week Mode</string>
    <string name="after_update_tips_msg">After the update, you can contact us for feedback on the About page. Appwidget may not work properly. Reboot the phone or delete the appwidget to add again can solve the problem. Thank you for using.</string>
    <string name="again_login_empty_hint">登录过期,请重新登录</string>
    <string name="ai_guide_dialog_confirm">开始体验</string>
    <string name="ai_guide_dialog_desc1">全学科覆盖，1V1互动解题</string>
    <string name="ai_guide_dialog_desc2">支持中英互译: 单词/词组/句子</string>
    <string name="ai_guide_dialog_title1">AI文字搜题</string>
    <string name="ai_guide_dialog_title2">AI单词查询</string>
    <string name="ai_writing_guide_content">拍照自动录入主题，一键AI生成</string>
    <string name="album_name_all">全部</string>
    <string name="album_name_cancel">取消</string>
    <string name="all_weeks">All</string>
    <string name="ambassador_tips_dialog_content">大使是快对君经过层层考核，选拔出的工作人员。他们在大学搜题酱里拥有独特的身份标识，并随时与快对汇报和沟通。他们是光荣的核心工作大使，承担着守护快对的责任。目前已面向部分省份开放招募，其他省份也将陆续开放，敬请等待！</string>
    <string name="ambassador_tips_dialog_title">大使认证说明</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer_desc">高校海量教材答案</string>
    <string name="app_bar_behavior">com.google.android.material.appbar.AppBarLayout.Behavior</string>
    <string name="app_name">WakeUp课程表</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="barcode_scan_hint_dialog_description">当条形码有残缺或者无法扫描的可以试试\n【输条码】</string>
    <string name="barcode_scan_hint_dialog_subtitle">在每本书的背面找到条形码</string>
    <string name="barcode_scan_hint_dialog_title">条形码</string>
    <string name="bind_phone_error_phone_hint">请输入正确的手机号</string>
    <string name="bind_phone_title">绑定手机号</string>
    <string name="book_details_picture_browse_error_content">图片加载失败了,点击刷新重试一下</string>
    <string name="book_feed_back_title_grade">年级</string>
    <string name="book_hint_off">该书已下架, 暂不可查阅～</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="button_apply">使用(%1$d)</string>
    <string name="button_apply_default">确认</string>
    <string name="button_back">返回</string>
    <string name="button_edit">编辑</string>
    <string name="button_ok">我知道了</string>
    <string name="button_preview">预览</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_base_ai_writing_middle_toast_text">平行纸面，文字对齐参考线\n对准主题或内容要求</string>
    <string name="camera_base_ai_writing_tab_name">拍照写作</string>
    <string name="camera_base_cam_scanner_middle_toast_text">平行手机进行扫描</string>
    <string name="camera_base_default_middle_toast_text" />
    <string name="camera_base_default_tab_name" />
    <string name="camera_base_doc_scanner_tab_name">文件扫描</string>
    <string name="camera_base_essay_correct_middle_toast_text">拍摄语文作文\n文字与参考线平行</string>
    <string name="camera_base_essay_correct_tab_name">语文作文批改</string>
    <string name="camera_base_extract_text_tab_name">提取文字</string>
    <string name="camera_base_fuse_middle_toast_text">把整页放进屏幕\n题目对齐参考线</string>
    <string name="camera_base_fuse_tab_name">作业检查</string>
    <string name="camera_base_fuse_tab_name_jiancha">作业检查</string>
    <string name="camera_base_id_photo_tab_name">拍证件照</string>
    <string name="camera_base_multiple_middle_toast_text">把整页放进屏幕\n题目对齐参考线</string>
    <string name="cancel">Cancel</string>
    <string name="client_service_central">客服中心</string>
    <string name="debug_fast_ad_debug_page">debug_fast_ad_debug_page</string>
    <string name="debug_key_action">debug_action_list</string>
    <string name="debug_key_ad_env">debug_key_ad_env</string>
    <string name="debug_key_app_start_duration">debug_key_app_start_duration</string>
    <string name="debug_key_capture_entrance_visible">debug_key_capture_entrance_visible</string>
    <string name="debug_key_community_visible">debug_key_community_visible</string>
    <string name="debug_key_cuid">debug_key_cuid</string>
    <string name="debug_key_encrypt">debug_key_encrypt</string>
    <string name="debug_key_env">debug_key_env</string>
    <string name="debug_key_fullscreen_check">debug_key_fullscreen_check</string>
    <string name="debug_key_h5_console">debug_key_h5_console</string>
    <string name="debug_key_https">debug_key_https</string>
    <string name="debug_key_hybrid_force_online">debug_key_hybrid_force_online</string>
    <string name="debug_key_hybrid_test_page">debug_key_hybrid_test_page</string>
    <string name="debug_key_input_foreign_ip_address">debug_key_input_foreign_ip_address</string>
    <string name="debug_key_input_url">debug_input_url</string>
    <string name="debug_key_model">debug_key_model</string>
    <string name="debug_key_nlog_track">debug_key_nlog_track</string>
    <string name="debug_key_oaid">debug_key_oaid</string>
    <string name="debug_key_real_time_track">debug_key_real_time_track</string>
    <string name="debug_key_scan_code">debug_key_scan_code</string>
    <string name="debug_key_set_environment_url">debug_key_set_environment_url</string>
    <string name="debug_key_tab_ai_visible">debug_key_tab_ai_visible</string>
    <string name="debug_key_test_action">debug_key_test_action</string>
    <string name="debug_key_tips">debug_key_tips</string>
    <string name="debug_key_to_word_visible">debug_key_to_word_visible</string>
    <string name="debug_key_translate_visible">debug_key_translate_visible</string>
    <string name="debug_key_uid">debug_key_uid</string>
    <string name="debug_key_whole_search_visible">debug_key_whole_search_visible</string>
    <string name="donate_alipay">Donate via Alipay</string>
    <string name="donate_feedback">Review on App Store</string>
    <string name="donate_follow_weibo">Follow our Sina Weibo</string>
    <string name="donate_message">Nice to meet you!</string>
    <string name="donate_view_list">Check the donation list</string>
    <string name="empty_text">还没有图片或视频</string>
    <string name="ok">OK</string>
    <string name="pic_search_day_time_limit">今日搜题过于频繁</string>
    <string name="pic_search_day_time_limit_tips">休息一下明日再来吧～</string>
    <string name="share_app">Share the App</string>
    <string name="summary_enable_community">打开社区入口</string>
    <string name="summary_enable_fullscreen_check">Only fullscreen opaque activities can request orientation check</string>
    <string name="summary_enable_h5_console">是否开启h5调试</string>
    <string name="summary_enable_https">是否启用HTTPS</string>
    <string name="summary_enable_hybrid_force_online">强制使用线上</string>
    <string name="summary_enable_nlog_track">打开埋点测试</string>
    <string name="summary_enable_not_encrypt">加密接口是否跳过加密</string>
    <string name="summary_enable_real_time_track">埋点实时测试</string>
    <string name="summary_enable_screen_capture">打开相机悬浮窗入口</string>
    <string name="summary_enable_tab_ai">打开TabAI入口</string>
    <string name="summary_enable_tips">是否开启tips测试</string>
    <string name="summary_enable_to_word">命中转word</string>
    <string name="summary_enable_translate">打开翻译入口</string>
    <string name="summary_enable_whole_search">打开拍整页入口</string>
    <string name="summary_set_environment_url">切换环境</string>
    <string name="summary_switch_env">换服务器的环境</string>
</resources>