<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="环境设置">
        <ListPreference
            android:key="@string/debug_key_env"
            android:summary="@string/summary_switch_env"/>
    </PreferenceCategory>
    <Preference
        android:title="设备型号(点击复制到粘贴板)"
        android:key="@string/debug_key_model"
        android:summary="model"/>
    <Preference
        android:title="CUID(点击复制到粘贴板)"
        android:key="@string/debug_key_cuid"
        android:summary="cuid"/>
    <Preference
        android:title="OAID(点击复制到粘贴板)"
        android:key="@string/debug_key_oaid"
        android:summary="oaid"/>
    <Preference
        android:title="UID(点击复制到粘贴板)"
        android:key="@string/debug_key_uid"
        android:summary="uid"/>
    <PreferenceCategory android:title="开关设置">
        <CheckBoxPreference
            android:title="启用Check"
            android:key="@string/debug_key_fullscreen_check"
            android:summary="@string/summary_enable_fullscreen_check"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="是否开启tips测试"
            android:key="@string/debug_key_tips"
            android:summary="@string/summary_enable_tips"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="开启h5调试"
            android:key="@string/debug_key_h5_console"
            android:summary="@string/summary_enable_h5_console"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="启用HTTPS"
            android:key="@string/debug_key_https"
            android:summary="@string/summary_enable_https"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:title="请求不加密"
            android:key="@string/debug_key_encrypt"
            android:summary="@string/summary_enable_not_encrypt"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="埋点测试开关"
            android:key="@string/debug_key_nlog_track"
            android:summary="@string/summary_enable_nlog_track"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="埋点实时测试开关"
            android:key="@string/debug_key_real_time_track"
            android:summary="@string/summary_enable_real_time_track"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="离线化不使用本地缓存"
            android:key="@string/debug_key_hybrid_force_online"
            android:summary="@string/summary_enable_hybrid_force_online"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="广告跟随环境走"
            android:key="@string/debug_key_ad_env"
            android:summary="不选中线上环境"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="是否打开社区"
            android:key="@string/debug_key_community_visible"
            android:summary="@string/summary_enable_community"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="是否打开翻译"
            android:key="@string/debug_key_translate_visible"
            android:summary="@string/summary_enable_translate"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="是否打开相机悬浮窗入口"
            android:key="@string/debug_key_capture_entrance_visible"
            android:summary="@string/summary_enable_screen_capture"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="是否打开TabAI入口"
            android:key="@string/debug_key_tab_ai_visible"
            android:summary="@string/summary_enable_tab_ai"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="是否打开拍整页入口"
            android:key="@string/debug_key_whole_search_visible"
            android:summary="@string/summary_enable_whole_search"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="是否命中转word入口"
            android:key="@string/debug_key_to_word_visible"
            android:summary="@string/summary_enable_to_word"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="其他设置">
        <EditTextPreference
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:title="模拟海外IP地址"
            android:key="@string/debug_key_input_foreign_ip_address"
            android:summary="仅QA环境生效,网络请求header增加X-Forwarded-For,请输入模拟的海外IP,例:182.239.127.137"
            android:dialogTitle="请输入模拟海外IP地址"/>
        <EditTextPreference
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:title="输入URL打开webView"
            android:key="@string/debug_key_input_url"
            android:summary="输入URL打开webView"
            android:dialogTitle="请输入URL"/>
        <Preference
            android:title="扫码打开网页"
            android:key="@string/debug_key_scan_code"
            android:summary="扫描二维码打开网页"/>
        <Preference
            android:title="基本action汇总"
            android:key="@string/debug_key_action"
            android:summary="基本action汇总"/>
        <Preference
            android:title="Action Test"
            android:key="@string/debug_key_test_action"/>
        <Preference
            android:title="hybrid调试页面"
            android:key="@string/debug_key_hybrid_test_page"/>
        <EditTextPreference
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:title="@string/summary_set_environment_url"
            android:key="@string/debug_key_set_environment_url"
            android:summary="@string/summary_set_environment_url"
            android:dialogTitle="请输入环境URL"/>
        <Preference
            android:title="FastAd调试页面"
            android:key="@string/debug_fast_ad_debug_page"
            android:summary="FastAd调试页面"/>
        <Preference
            android:title="app冷启动耗时统计"
            android:key="@string/debug_key_app_start_duration"
            android:summary="app冷启动耗时统计"/>
    </PreferenceCategory>
</PreferenceScreen>
