<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_toolbar"
        android:layout_below="@+id/toolbar"/>
    <FrameLayout
        android:id="@+id/selected_container"
        android:background="#66000000"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <ListView
            android:id="@+id/selected_list"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:minHeight="0dp"/>
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/toolbar"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="47dp">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:textSize="18sp"
                android:textColor="#333333"
                android:gravity="center"
                android:id="@+id/selected_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_name_all"/>
            <ImageView
                android:id="@+id/iv_toolbar_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:src="@drawable/ic_arrow_down_24"/>
        </LinearLayout>
        <TextView
            android:textSize="16sp"
            android:textColor="#333333"
            android:gravity="center"
            android:id="@+id/close_album"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/album_name_cancel"
            android:layout_alignParentRight="true"/>
        <View
            android:background="#efefef"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:id="@+id/button_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="36dp">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_button_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"/>
            <TextView
                android:textSize="12sp"
                android:textColor="?attr/bottomToolbar.preview.textColor"
                android:layout_gravity="center"
                android:id="@+id/tv_button_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_preview"
                android:includeFontPadding="false"/>
        </LinearLayout>
        <TextView
            android:textSize="16sp"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/button_apply"
            android:background="@drawable/zybang_matisse_color_gradual_change_bg"
            android:layout_width="260dp"
            android:layout_height="44dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_apply_default"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"/>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/empty_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_toolbar"
        android:layout_below="@+id/toolbar">
        <TextView
            android:textSize="16sp"
            android:textColor="?attr/album.emptyView.textColor"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/empty_view_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_text"
            android:drawableTop="?attr/album.emptyView"
            android:drawablePadding="8dp"/>
    </FrameLayout>
</RelativeLayout>
