<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black_141414"
        android:layout_gravity="center_horizontal"
        android:id="@+id/limit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/pic_search_day_time_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/limit_icon"
        android:background="@drawable/bg_pic_search_time_limit_error_image"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="54dp"
        android:maxHeight="120dp"
        android:contentDescription="@string/pic_search_day_time_limit_tips"
        app:layout_constraintBottom_toTopOf="@+id/limit_tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
        android:textSize="14sp"
        android:textColor="#1b1e29"
        android:layout_gravity="center_horizontal"
        android:id="@+id/limit_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pic_search_day_time_limit_tips"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/stv_to_client_central"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limit_icon"/>
    <com.suda.yzune.wakeupschedule.aaa.widget.stateview.StateTextView
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/stv_to_client_central"
        android:background="@drawable/app_theme_bg_8dp_corner"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/search_result_opt_height"
        android:text="@string/client_service_central"
        android:includeFontPadding="false"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limit_tips"/>
</androidx.constraintlayout.widget.ConstraintLayout>
