<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="280dp">
    <com.google.android.material.textview.MaterialTextView
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_course_title_select_time"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <com.suda.yzune.wakeupschedule.widget.NumberPickerView
            android:id="@+id/wp_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:npv_DividerColor="?attr/colorPrimary"
            app:npv_RespondChangeOnDetached="false"
            app:npv_ShownCount="4"
            app:npv_TextColorNormal="?attr/colorOnBackground"
            app:npv_TextColorSelected="?attr/colorPrimary"
            app:npv_TextSizeNormal="14sp"
            app:npv_TextSizeSelected="14sp"
            app:npv_WrapSelectorWheel="true"/>
        <com.suda.yzune.wakeupschedule.widget.NumberPickerView
            android:id="@+id/wp_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:npv_DividerColor="?attr/colorPrimary"
            app:npv_RespondChangeOnDetached="false"
            app:npv_ShownCount="4"
            app:npv_TextColorNormal="?attr/colorOnBackground"
            app:npv_TextColorSelected="?attr/colorPrimary"
            app:npv_TextSizeNormal="14sp"
            app:npv_TextSizeSelected="14sp"
            app:npv_WrapSelectorWheel="false"/>
        <com.suda.yzune.wakeupschedule.widget.NumberPickerView
            android:id="@+id/wp_end"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:npv_DividerColor="?attr/colorPrimary"
            app:npv_RespondChangeOnDetached="false"
            app:npv_ShownCount="4"
            app:npv_TextColorNormal="?attr/colorOnBackground"
            app:npv_TextColorSelected="?attr/colorPrimary"
            app:npv_TextSizeNormal="14sp"
            app:npv_TextSizeSelected="14sp"
            app:npv_WrapSelectorWheel="false"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            style="@style/DialogButtonStyle"/>
        <com.google.android.material.button.MaterialButton
            android:textStyle="bold"
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:text="@string/ok"
            android:layout_weight="1"
            style="@style/DialogButtonStyle"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
